--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -36,7 +36,7 @@ RUN       set -ex \
             && rm -rf /var/lib/apt/lists/*
 
 
-COPY      . /opt/newsblur/
-COPY      docker/local_settings.py ./local_settings.py
+#COPY      . /opt/newsblur/
+COPY      docker/dev/local_settings.py ./local_settings.py
 CMD       ["gunicorn", "--bind", ":8000", "wsgi"]
 EXPOSE 8000
