--- a/config/supervisor_node_unread.conf
+++ b/config/supervisor_node_unread.conf
@@ -6,8 +6,8 @@ user=sclay
 autostart=true
 autorestart=true
 #redirect_stderr=True
-minfds = 10000
+minfds = 10000 # file descriptors
 priority=991
-stopsignal=HUP
+stopsignal=HUP # graceful restart
 stdout_logfile = /srv/newsblur/logs/unread_counts.log
 stderr_logfile = /srv/newsblur/logs/error_unread_counts.log
