--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,16 +26,22 @@ services:
      - .:/opt/newsblur
     stdin_open: true
     tty: true
+    ulimits:
+      nproc: 10535
+      nofile:
+        soft: 10000
+        hard: 10000
   nginx:
     image: nginx:1.13
     ports:
-      - 8000:8000
+      - 80:80
     depends_on:
     - newsblur_container
     networks:
     - nginx_network
     volumes:
     - ./docker/nginx:/etc/nginx/conf.d
+    - .:/opt/newsblur
 
   postgres:
     image: postgres:9
@@ -43,7 +49,7 @@ services:
       - POSTGRES_USER=newsblur
       - POSTGRES_PASSWORD=newsblur
     ports:
-      - '5432:5432'
+      - 5432:5432
     volumes:
       - ./docker/postgres:/docker-entrypoint-initdb.d
       - ./docker/volumes/postgres:/var/lib/postgresql/data
