--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -38,5 +38,5 @@ RUN       set -ex \
 
 #COPY      . /opt/newsblur/
 COPY      docker/dev/local_settings.py ./local_settings.py
-CMD       ["gunicorn", "--bind", ":8000", "wsgi"]
+CMD       ["gunicorn", "--bind", ":8000", "wsgi:application"]
 EXPOSE 8000
