--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -38,5 +38,5 @@ RUN       set -ex \
 
 COPY      . /opt/newsblur/
 COPY      docker/local_settings.py ./local_settings.py
-CMD       ["gunicorn", "--bind", ":8000", "newsblur.wsgi:wsgi"]
+CMD       ["gunicorn", "--bind", ":8000", "wsgi:application"]
 EXPOSE 8000
