--- a/docker/nginx/nginx.local.conf
+++ b/docker/nginx/nginx.local.conf
@@ -23,7 +23,7 @@ server {
 
     ssl_dhparam     /opt/newsblur/config/certificates/dhparams.pem;
     client_max_body_size 4M;
-    server_name www.newsblur.com newsblur.com dev.newsblur.com push.newsblur.com *.newsblur.com circularapp.com *.circularapp.com;
+    server_name *.nb.local.com nb.local.com;
     add_header X-nginx-server nginx_none;
 
     set_real_ip_from  0.0.0.0/0;
