Create manifests for docker swarm mode, use images from dockerhub and create local base images

--- a/docker/haproxy/Dockerfile
+++ b/docker/haproxy/Dockerfile
@@ -21,15 +21,15 @@ COPY . /opt/newsblur/
 RUN  python2.7 -m pip install -r requirements.txt --user
 COPY local_settings.py.template local_settings.py
 
-RUN python fabfile.py build_haproxy
+RUN python /opt/newsblur/fabfile.py
 RUN cp /opt/newsblur/config/haproxy.conf /usr/local/etc/haproxy/haproxy.cfg
-#RUN 'echo "ENABLED=1" | sudo tee /etc/default/haproxy'
-#RUN 'cat ${NEWSBLUR_PATH}/config/certificates/newsblur.com.crt > ${NEWSBLUR_PATH}/config/certificates/newsblur.pem'
-#RUN 'cat ${NEWSBLUR_PATH}/config/certificates/newsblur.com.key >> ${NEWSBLUR_PATH}/config/certificates/newsblur.pem' 
+RUN 'echo "ENABLED=1" | sudo tee /etc/default/haproxy'
+RUN 'cat ${NEWSBLUR_PATH}/config/certificates/newsblur.com.crt > ${NEWSBLUR_PATH}/config/certificates/newsblur.pem'
+RUN 'cat ${NEWSBLUR_PATH}/config/certificates/newsblur.com.key >> ${NEWSBLUR_PATH}/config/certificates/newsblur.pem' 
 COPY 'config/haproxy_rsyslog.conf' '/etc/rsyslog.d/49-haproxy.conf'
-#RUN 'restart rsyslog'
-#RUN 'update-rc.d -f haproxy defaults'
+RUN 'restart rsyslog'
+RUN 'update-rc.d -f haproxy defaults'
 
-#RUN '/etc/init.d/haproxy stop'
-#RUN 'sleep 5'
-#CMD '/etc/init.d/haproxy start'
+RUN '/etc/init.d/haproxy stop'
+RUN 'sleep 5'
+CMD '/etc/init.d/haproxy start'
