--- a/docker/nginx/nginx.local.conf
+++ b/docker/nginx/nginx.local.conf
@@ -1,11 +1,11 @@
 upstream app_server {
-    server newsblur_container:8000 fail_timeout=10 max_fails=3 ;
+    server web_newsblur_service:8000 fail_timeout=10 max_fails=3 ;
 }
 
 upstream icon_server {
     # this is node favicons
     server 127.0.0.1:3030 fail_timeout=2 max_fails=3;
-    server newsblur_container:8000 backup;
+    server web_newsblur_service:8000 backup;
 }
 
 
