--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ templates/maintenance_on.html
 vendor/mms-agent/settings.py
 apps/social/spam.py
 venv
+node/node_modules
 
 # ----------------------
 # Android
