--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -21,6 +21,7 @@ django-timezone-field==2.0
 Django>=1.5,<1.6
 dnspython==1.15.0
 Fabric==1.14.0
+Flask==1.1.2
 gunicorn==19.7
 hiredis==0.2.0
 httplib2==0.18.1
