--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,47 +1,42 @@
----
 version: '3'
 services:
-  newsblur_container:
+  newsblur_web:
     build: 
       context: ./
       dockerfile: ./docker/dev/Dockerfile
+    container_name: newsblur_web
+    stdin_open: true
+    tty: true
+    volumes:
+      -  .:/srv/newsblur
+      - ./docker/local_settings.py:/srv/newsblur/local_settings.py
     links:
       - mongo
       - postgres
       - elasticsearch
       - redis
     restart: always
-    networks:
-      - nginx_network
-      - postgres_network
-      - redis_network
-      - mongo_network
-      - elasticsearch_network
     depends_on:
       - mongo
       - postgres
       - redis
       - elasticsearch
-    volumes:
-     - .:/opt/newsblur
-    stdin_open: true
-    tty: true
     ulimits:
       nproc: 10000
       nofile:
         soft: 10000
         hard: 10000
   nginx:
+    container_name: nginx
     image: nginx:1.13
     ports:
       - 80:80
     depends_on:
-    - newsblur_container
-    networks:
-    - nginx_network
+    - newsblur_web
+    - favicons
     volumes:
     - ./docker/nginx:/etc/nginx/conf.d
-    - .:/opt/newsblur
+    - .:/srv/newsblur
 
   postgres:
     image: postgres:9
@@ -53,22 +48,18 @@ services:
     volumes:
       - ./docker/postgres:/docker-entrypoint-initdb.d
       - ./docker/volumes/postgres:/var/lib/postgresql/data
-    networks:
-      - postgres_network
 
   redis:
     image: redis:3
     ports:
       - '6379:6379'
+    container_name: redis
     volumes:
       - ./docker/volumes/redis:/data
       - ./config/redis.conf:/usr/local/etc/redis_server.conf
       - ./config/redis_docker.conf:/etc/redis_server.conf
       - ./docker/volumes/redis.var.lib:/var/lib/redis
     command: /usr/local/bin/redis-server /usr/local/etc/redis_server.conf
-    networks:
-      - redis_network
-
 
   elasticsearch:
     image: elasticsearch:1.7
@@ -76,27 +67,132 @@ services:
       - '9200:9200'
     volumes:
       - ./docker/volumes/elasticsearch:/usr/share/elasticsearch/data
-    networks:
-      - elasticsearch_network
 
   mongo:
+    container_name: mongo
     image: mongo:3.2
     ports:
-      - '27017:27017'
+      - 27017:27017
     command: mongod --smallfiles
     volumes:
       - ./docker/volumes/mongo:/data/db
-    networks:
-      - mongo_network
 
-networks:
-  nginx_network:
-    driver: bridge
-  postgres_network:
-    driver: bridge
-  redis_network:
-    driver: bridge
-  mongo_network:
-    driver: bridge
-  elasticsearch_network:
-    driver: bridge
+  original_pages:
+    image: jmath1/newsblur_node
+    container_name: node_original_page
+    environment:
+      - NODE_ENV=production
+    command: node original_page.js
+    ports:
+      - 3060:3060
+  original_text:
+    image: jmath1/newsblur_node
+    container_name: node_original_text
+    environment:
+      - NODE_ENV=production
+    ports:
+      - 4040:4040
+    command: node original_text.js
+
+  favicons:
+    image: jmath1/newsblur_node
+    container_name: node_favicons
+    environment:
+      - NODE_ENV=production
+    ports:
+      - 3030:3030
+    command: node favicons.js
+  
+  unread:
+    container_name: unread
+    image: jmath1/newsblur_node
+    environment:
+      - NODE_ENV=production
+    command: node unread_counts.js
+    stop_signal: HUP
+    ports:
+      - 8889:8889
+
+  celerybeat:
+    container_name: celerybeat
+    image: jmath1/newsblur_base
+    command: bash -c "/srv/newsblur/manage.py celery beat --schedule=/srv/newsblur/data/celerybeat-schedule.db --loglevel=INFO"
+    volumes:
+      - .:/srv/newsblur
+      - ./config:/etc/supervisor/conf.d/
+
+  
+  celeryd:
+    container_name: celeryd
+    image: jmath1/newsblur_base
+    command: "/srv/newsblur/manage.py celery worker --loglevel=INFO -Q new_feeds,push_feeds,update_feeds"
+    volumes:
+      - .:/srv/newsblur
+    user: "${CURRENT_UID}:${CURRENT_GID}"
+
+  celeryd_beat:
+    container_name: celeryd_beat
+    image: jmath1/newsblur_base
+    command: "/srv/newsblur/manage.py celery worker --loglevel=INFO -Q beat_tasks -c 3"
+    volumes:
+      - .:/srv/newsblur
+    user: "${CURRENT_UID}:${CURRENT_GID}"
+
+  celeryd_beat_feeds:
+    container_name: celeryd_beat_feeds
+    image: jmath1/newsblur_base
+    command: "/srv/newsblur/manage.py celery worker --loglevel=INFO -Q beat_feeds_task -c 1"
+    volumes:
+      - .:/srv/newsblur
+    user: "${CURRENT_UID}:${CURRENT_GID}"
+
+  celeryd_news:
+    container_name: celeryd_news
+    image: jmath1/newsblur_base
+    command: "/srv/newsblur/manage.py celery worker --loglevel=INFO -Q new_feeds,push_feeds"
+    volumes:
+      - .:/srv/newsblur
+    user: "${CURRENT_UID}:${CURRENT_GID}"
+
+  celeryd_search_indexer:
+    container_name: celeryd_search_indexer
+    image: jmath1/newsblur_base
+    command: "/srv/newsblur/manage.py celery worker --loglevel=INFO -Q search_indexer -c 4"
+    volumes:
+      - .:/srv/newsblur
+    user: $CURRENT_UID:$CURRENT_GID
+
+  celeryd_search_indexer_tasker:
+    container_name: celeryd_search_indexer_tasker
+    image: jmath1/newsblur_base
+    command: "/srv/newsblur/manage.py celery worker --loglevel=INFO -Q search_indexer_tasker -c 2"
+    volumes:
+      - .:/srv/newsblur
+    user: $CURRENT_UID:$CURRENT_GID
+
+  celeryd_work_queue:
+    container_name: celeryd_work_queue
+    image: jmath1/newsblur_base
+    command: "/srv/newsblur/manage.py celery worker --loglevel=INFO -Q work_queue"
+    volumes:
+      - .:/srv/newsblur
+    user: $CURRENT_UID:$CURRENT_GID
+
+  monitor:
+    container_name: monitor
+    image: jmath1/newsblur_base 
+    command: bash -c "python /srv/newsblur/flask_monitor/db_monitor.py"
+    volumes:
+      - .:/srv/newsblur
+    ports:
+      - 5000:5000
+
+  #haproxy:
+  #  build:
+  #    context: .
+  #    dockerfile: docker/haproxy/Dockerfile
+  #  ports:
+  #    #if nginx is running on 80, what should haproxy run on?
+  #    - 80:80
+  #  volumes:
+  #    - ./docker/haproxy/haproxy.conf:/etc/haproxy/haproxy.cfg
