--- a/docker/nginx/nginx.local.conf
+++ b/docker/nginx/nginx.local.conf
@@ -1,11 +1,11 @@
 upstream app_server {
-    server web_newsblur_service:8000 fail_timeout=10 max_fails=3 ;
+    server newsblur_web:8000 fail_timeout=10 max_fails=3 ;
 }
 
 upstream icon_server {
     # this is node favicons
-    server 127.0.0.1:3030 fail_timeout=2 max_fails=3;
-    server web_newsblur_service:8000 backup;
+    server favicons:3030 fail_timeout=2 max_fails=3;
+    server newsblur_web:8000 backup;
 }
 
 
@@ -14,14 +14,14 @@ server {
     listen   443 default_server ssl;
 
     # ssl                     on;
-    ssl_certificate         /opt/newsblur/config/certificates/newsblur.com.pem;
-    ssl_certificate_key     /opt/newsblur/config/certificates/newsblur.com.key;
+    ssl_certificate         /srv/newsblur/config/certificates/newsblur.com.pem;
+    ssl_certificate_key     /srv/newsblur/config/certificates/newsblur.com.key;
     ssl_ciphers "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA";
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
-    ssl_dhparam     /opt/newsblur/config/certificates/dhparams.pem;
+    ssl_dhparam     /srv/newsblur/config/certificates/dhparams.pem;
     client_max_body_size 4M;
     server_name *.nb.local.com nb.local.com;
     add_header X-nginx-server nginx_none;
@@ -34,7 +34,7 @@ server {
 #        rewrite  ^/(.*)$  https://www.newsblur.com/$1  permanent;
 #    }
 
-    if (-f /opt/newsblur/templates/maintenance_on.html) {
+    if (-f /srv/newsblur/templates/maintenance_on.html) {
         return 503;
     }
     
@@ -51,51 +51,51 @@ server {
     
     error_page 502 @down;
     location @down {
-        root /opt/newsblur/;
+        root /srv/newsblur/;
         rewrite ^(.*)$ /templates/502.html break;
     }
     
     error_page 503 @maintenance;
     location @maintenance {
         if ($uri !~ ^/media/) {
-            root /opt/newsblur/;
+            root /srv/newsblur/;
             rewrite ^(.*)$ /templates/maintenance_on.html break;
         }
-        root /opt/newsblur;
+        root /srv/newsblur;
     }
     
     error_page 504 @timeout;
     location @timeout {
-        root /opt/newsblur/;
+        root /srv/newsblur/;
         rewrite ^(.*)$ /templates/502.html break;
     }
 
     location /media/  {
         expires max;
         keepalive_timeout 1;
-        root /opt/newsblur;
+        root /srv/newsblur;
     }
 
     location /static/  {
         expires max;
         keepalive_timeout 1;
-        root /opt/newsblur;
+        root /srv/newsblur;
     }
 
     location /favicon.ico {
-        alias      /opt/newsblur/media/img/favicon_32.png;
+        alias      /srv/newsblur/media/img/favicon_32.png;
         expires max;
     }
 
     location /maintenance {
-        alias      /opt/newsblur/templates/maintenance_on.html;
+        alias      /srv/newsblur/templates/maintenance_on.html;
         expires max;
         access_log on;
     }
 
     location ^~ /crossdomain.xml {
         expires max;
-        alias /opt/newsblur/media/crossdomain.xml;
+        alias /srv/newsblur/media/crossdomain.xml;
         types {
             text/x-cross-domain-policy  xml;
         }
@@ -103,7 +103,7 @@ server {
 
     location ^~ /robots.txt {
         expires max;
-        alias /opt/newsblur/media/robots.txt;
+        alias /srv/newsblur/media/robots.txt;
     }
 
     location /munin/static/ {
