--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -32,8 +32,15 @@ services:
     ports:
       - 80:80
     depends_on:
-    - newsblur_web
-    - favicons
+      - newsblur_web
+      - favicons
+      - postgres
+      - redis
+      - mongo
+      - elasticsearch
+      - original_pages
+      - original_text
+      - node_websocket
     volumes:
     - ./docker/nginx:/etc/nginx/conf.d
     - .:/srv/newsblur
@@ -49,6 +56,7 @@ services:
     volumes:
       - ./docker/postgres:/docker-entrypoint-initdb.d
       - ./docker/volumes/postgres:/var/lib/postgresql/data
+      - ./config/postgresql.conf:/var/lib/postgresql/data/postgresql.conf
 
   redis:
     image: redis:3
@@ -105,7 +113,7 @@ services:
     command: node favicons.js
   
   node_websocket:
-    container_name: unread
+    container_name: node_websocket
     image: jmath1/newsblur_node
     environment:
       - NODE_ENV=production
