consistently use docker_local_settings.py

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,3 @@
 FROM jmath1/newsblur_base
-COPY      . /srv/newsblur/
-COPY      docker/local_settings.py ./local_settings.py
+COPY      docker_local_settings.py docker_local_settings.py
 CMD       ["gunicorn", "--bind", ":8000", "wsgi:application"]
