--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
     container_name: elasticsearch
     image: elasticsearch:1.7
     ports:
-      - '9200:9200'
+      - '9300:9300'
     volumes:
       - ./docker/volumes/elasticsearch:/usr/share/elasticsearch/data
 
@@ -129,7 +129,7 @@ services:
   celerybeat:
     container_name: celerybeat
     image: jmath1/newsblur_base
-    command: bash -c "mkdir -p data && /srv/newsblur/manage.py celery beat --schedule=/srv/newsblur/data/celerybeat-schedule.db --loglevel=INFO"
+    command: bash -c "mkdir -p data &&  /srv/newsblur/manage.py celery beat --schedule=/srv/newsblur/data/celerybeat-schedule.db --loglevel=INFO --pidfile=/srv/celeryd.pid"
     environment: 
       - DOCKERBUILD=True
     volumes:
