--- a/docker/haproxy/haproxy.conf
+++ b/docker/haproxy/haproxy.conf
@@ -123,7 +123,7 @@ backend postgres
 
 backend mongo
     option httpchk GET http://monitor:5000/db_check/mongo
-    server-template mongo 4 mongo:27017 check inter 2000ms
+    server-template mongo 4 db_mongo:27017 check inter 2000ms
 
 backend redis
     option httpchk GET http://monitor:5000/db_check/redis
@@ -140,7 +140,7 @@ backend redis_sessions
 
 backend elasticsearch
     option httpchk GET http://monitor:5000/db_check/elasticsearch
-    server es-search01 elasticsearch:9200 check inter 2000ms
+    server es-search01 elasticsearch:9300 check inter 2000ms
 
 backend maintenance
     option httpchk HEAD /maintenance HTTP/1.1\r\nHost:\ www
