--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -1,4 +1,2 @@
-FROM jmath1/newsblur_base
-#COPY      . /opt/newsblur/
-#COPY      docker/local_settings.py ./local_settings.py
+FROM newsblur/newsblur
 CMD       ["gunicorn", "--bind", ":8000", "wsgi:application"]
