--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
-FROM jmath1/newsblur_base
+FROM newsblur/newsblur
 COPY      docker_local_settings.py docker_local_settings.py
 CMD       ["gunicorn", "--bind", ":8000", "wsgi:application"]
